@@ -39,6 +39,8 @@
 
 #include <sys/types.h>
 #include <sys/time.h>
+#include <time.h>
+
 #ifndef __MINGW__
 #include <pwd.h>
 #endif
